Edit code in ResourceSelector, modifed MultilineWindow
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6924 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
@@ -46,8 +46,8 @@
 				multilineWindow.title = _title;
 				dispatchEvent( new AttributeEvent( AttributeEvent.CHOSE_RESOURCES_IN_MULTILINE ) );				
 				
-				multilineWindow.addEventListener( "apply", multilineWindow_applyHandler, false, 0, true );
-				multilineWindow.addEventListener( "cancel", multilineWindow_applyHandler, false, 0, true );
+				multilineWindow.addEventListener( MultilineWindowEvent.APPLY, multilineWindow_applyHandler, false, 0, true );
+				multilineWindow.addEventListener( MultilineWindowEvent.CLOSE, multilineWindow_applyHandler, false, 0, true );
 				
 				PopUpManager.addPopUp( multilineWindow, DisplayObject( UIComponent( parent ).parentApplication ), true );
 				PopUpManager.centerPopUp( multilineWindow );
@@ -59,9 +59,9 @@
 
 				if ( currentTarget is MultilineWindow )
 				{
-					if (event.type == "apply")
+					if (event.type == MultilineWindowEvent.APPLY)
 						value = event.value;				
-					UIComponent( currentTarget ).removeEventListener( "apply", multilineWindow_applyHandler, false );					
+					UIComponent( currentTarget ).removeEventListener( MultilineWindowEvent.APPLY, multilineWindow_applyHandler, false );					
 				}
 
 //				var popUpWindowManager : PopUpManager = PopUpManager.getInstance();
