--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -14,9 +14,6 @@
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.wysiwyg.events.AttributeEvent;
-			 
-			[Bindable]
-			public var value:String = "";
 		]]>
 	</fx:Script>
 	
@@ -67,7 +64,7 @@
 							editable="true"
 							selectable="true"
 							clipAndEnableScrolling="true"
-							text="{hostComponent.attributeValue + value}"
+							text="{hostComponent.attributeValue}"
 							height="100%" width="100%"
 							minHeight="0"
 							backgroundColor="#FFFFFF" bottom="65" fontFamily="Courier New" fontSize="12" left="5" right="5" top="5" />
@@ -88,9 +85,9 @@
 			<s:Button width="138" height="29" 
 					  icon="@Embed(source='icons/Add.png')"
 					  label="Resources" cornerRadius="15" 
-					  click="dispatchEvent( new AttributeEvent( AttributeEvent.SELECT_RESOURCE ) )"/>
+					  click="{dispatchEvent( new AttributeEvent( AttributeEvent.SELECT_RESOURCE ) )}"/>
 			
-			<s:Spacer width="100%" />
+			<s:Spacer width="100%"/>
 			
 			<s:Button width="48" height="29" cornerRadius="15" 
 					  icon="@Embed(source='icons/Cancel.png')" iconPlacement="top"
