bug fix: Strange symbols appear
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6926 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -12,7 +12,15 @@
 			
 			private function init():void
 			{
-				this.addEventListener(KeyboardEvent.KEY_UP, onKeyboardKeyUp);
+				this.addEventListener(KeyboardEvent.KEY_UP,		onKeyboardKeyUp);
+				this.addEventListener(KeyboardEvent.KEY_DOWN,	onKeyboardKeyDown);
+			}
+			
+			private function onKeyboardKeyDown(keyEvent:KeyboardEvent):void
+			{
+				if (keyEvent.ctrlKey && !(keyEvent.keyCode == Keyboard.C || keyEvent.keyCode == Keyboard.V) ) {
+					keyEvent.preventDefault();
+				}
 			}
 			
 			private function onKeyboardKeyUp(keyEvent:KeyboardEvent):void
