--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -4,7 +4,7 @@
 			 xmlns:s="library://ns.adobe.com/flex/spark" 
 			 xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
 			 xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*"
-			 alpha.disabled="0.5" width="800" height="600" minWidth="800" minHeight="600">
+			 alpha.disabled="0.5" width="700" height="500" minWidth="800" minHeight="600">
 	
 	<fx:Metadata>
 		<![CDATA[ 
@@ -32,27 +32,43 @@
 	</s:states>
 	
 	<!-- Transitions for open and close -->
-	<s:Rect width="100%" height="100%">
+	<s:Rect width="100%" height="100%" radiusX="10" radiusY="10">
 		<s:fill>
-			<s:SolidColor color="#543333"/>
-		</s:fill>	
+			<s:SolidColor color="#424242"/>
+		</s:fill>
 	</s:Rect>
 	
-	<s:VGroup width="100%" height="100%">
+	<s:VGroup width="100%" height="100%" gap="0"
+			  left="9" top="9" right="9" bottom="9">
 	
+		<s:Group width="100%" height="42">
+			<s:Rect bottom="0" left="0" right="0" top="0">
+				<s:fill>
+					<s:LinearGradient rotation="90">
+						<s:GradientEntry color="#B70000"/>
+						<s:GradientEntry color="#A00000"/>
+					</s:LinearGradient>
+				</s:fill>
+			</s:Rect>
+			<s:Label text="Resource browser" top="12" left="20" color="#FFFFFF" fontSize="20"/>
+		</s:Group>
+		
 		<mx:Canvas width="100%" backgroundColor="#C2C2C2">
 		
-			<s:HGroup width="100%" verticalAlign="middle">		 
-		
-				<s:Label text="Filter: "/>
+			<s:HGroup width="100%" verticalAlign="middle" paddingLeft="5">		 
+				<s:TextInput id="nameFilter"
+							 text="type a filter here" width="150"
+							 borderColor="#999999" color="#666666"
+							 fontFamily="Tahoma" fontWeight="bold"/>
 				
-				<s:ComboBox id="typeFilter"/>
+				<s:Image id="__spinner" height="18"  width="18" visible="false" skinClass="spark.skins.spark.ImageSkin"/>
+				
+				<s:Label text="Total Resources:"/>
+				
+				<s:Label text="{hostComponent.totalResources}"
+						 fontWeight="bold"/>
 				
 				<s:Spacer width="100%"/>
-				
-				<s:Button label="Refresh"
-				   			cornerRadius="0"
-				   			click="hostComponent.refreshFile(event)" />
 				
 				<s:Button label="Upload File..."
 				   			cornerRadius="0"
@@ -60,126 +76,33 @@
 			</s:HGroup>
 			
 		</mx:Canvas>
-
-		<s:HGroup height="100%" width="100%">		
-		
+	
 		<!-- body -->
-			<s:VGroup height="100%" width="207"
-					  	gap="0" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0">
-			
-				<s:HGroup width="100%"
-					 	gap="3" paddingBottom="3" paddingLeft="5" paddingRight="0" paddingTop="3" verticalAlign="middle">
+		<s:List id="resourcesList" dataProvider="{ hostComponent._resources }"
+				 height="100%" horizontalScrollPolicy="off" verticalScrollPolicy="on" width="100%"
+				 itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.ListItem"
+				 change="hostComponent.selectResource(event)">
+			<s:layout>
+				<s:TileLayout requestedColumnCount="3"
+							  requestedRowCount="2"
+							  horizontalGap="0"
+							  verticalGap="0" />
+			</s:layout>
+		</s:List>
 				
-					<s:TextInput id="nameFilter"
-							  text="type a filter here" width="100%"
-							  borderColor="#999999" color="#666666"
-							  fontFamily="Tahoma" fontWeight="bold"/>
-				
-					<s:Image id="__spinner" height="18"  width="18" visible="false" skinClass="spark.skins.spark.ImageSkin"/>
-					
-				</s:HGroup>
-			
-				<mx:List id="resourcesList" dataProvider="{ hostComponent._resources }"
-					 		height="100%" horizontalScrollPolicy="off" verticalScrollPolicy="on" width="100%"
-							paddingLeft="5" paddingRight="5" paddingBottom="5" paddingTop="5"
-					 		itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.ListItem"
-					 		change="hostComponent.selectResource(event)"/>
-			</s:VGroup>		
-		
-		<!--  preloader  -->
-		<s:VGroup height="100%" width="100%"
-				 horizontalAlign="center" verticalAlign="middle" gap="2">
-			
-			<mx:Box id="previewArea"
-					height="100%" width="100%"
-					horizontalAlign="center" verticalAlign="middle">
-				<mx:Box borderStyle="solid" backgroundColor="#FFF6EA" cornerRadius="3"
-						horizontalScrollPolicy="off" verticalScrollPolicy="off"
-						horizontalAlign="center" verticalAlign="middle"
-						paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10"
-						xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*">
-					
-					<resourceBrowserWindow:SmoothImage id="imagePreview" maintainAspectRatio="true" horizontalAlign="center" verticalAlign="middle"
-													   scaleContent="true"  maxHeight="200" maxWidth="200"
-													   />
-					
-				</mx:Box>
-				
-			</mx:Box>
-			
-			<s:HGroup width="100%" horizontalAlign="center" verticalAlign="middle">
-				
-				<mx:Box	backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
-					<mx:Label id="resourceName"
-							  height="18" maxWidth="350" 
-							  fontWeight="bold" textAlign="center"/>
-				</mx:Box>
-				
-				<mx:Box backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
-					<mx:Label id="resourceType"
-							  height="18" 
-							  fontWeight="bold"/>
-				</mx:Box>
-				
-				<mx:Box backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
-					<mx:Label id="resourceResolution"
-							  height="18" text=""
-							  fontWeight="bold"/>
-				</mx:Box>
-				
-			</s:HGroup>
-			
-			<mx:Box backgroundColor="#E4E2FD" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
-				<mx:Label id="resourceID"
-						  height="18" selectable="true" 
-						  fontWeight="bold"/>
-			</mx:Box>
-			
-		</s:VGroup>
-		
-	</s:HGroup>
-	
-	
 	<!--  futer  -->
-	<mx:Canvas width="100%" backgroundColor="#C2C2C2">
 		<s:HGroup width="100%" height="30"
-			  paddingBottom="2" paddingLeft="10" paddingRight="10" paddingTop="2"
-			  verticalAlign="middle"
-			  accentColor.normal="#4D2424">
-		
-			<s:Label text="Total Resources:"/>
-		
-			<s:Label text="{hostComponent.totalResources}"
-				  fontWeight="bold"/>
-		
-			<s:Line height="18">
-				<s:stroke>
-					<s:SolidColorStroke color="#C2C2C2" weight="1"/>
-				</s:stroke>
-			</s:Line>
-		
-			<s:Label text="Filtered:"/>
-		
-			<s:Label text="{hostComponent.filteredResources}"
-				  fontWeight="bold"/>
-		
-			<s:Line height="18">
-				<s:stroke>
-					<s:SolidColorStroke color="#C2C2C2" weight="1"/>
-				</s:stroke>
-			</s:Line>
-		
-			<s:Spacer width="100%"/>
+			      paddingBottom="2" paddingLeft="10" paddingRight="10" paddingTop="2"
+			      verticalAlign="middle" horizontalAlign="right">
 		
 			<s:Button label="Apply"				   
-				   click="hostComponent.onApplyClick()" />
+				      click="hostComponent.onApplyClick()" />
 		
 			<s:Button id="cancelButton"
-				   label="Cancel"
-				   cornerRadius="0"
-				   click="hostComponent.onCancelClick()" />
+				   	  label="Cancel"
+				   	  cornerRadius="0"
+				      click="hostComponent.onCancelClick()" />
 		</s:HGroup>
-	</mx:Canvas>
 	</s:VGroup>
 	
 </s:SparkSkin>
